Closed Bug 1098000 Opened 11 years ago Closed 11 years ago

Failing MOZ_ASSERT(mGLTextureSource == aTextureSource);

Categories

(Core :: Graphics: Layers, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla36

People

(Reporter: khuey, Assigned: nical)

References

Details

(Keywords: assertion, regression)

Attachments

(2 files, 2 obsolete files)

Attached file Stack
I see this pretty reliably when repeatedly opening and closing a "tray" of icons on the homescreen.
khuey, can you explain more about '"tray" of icons'? Is it "Smart Collection"? or other things? I try to reproduce the problem around homescreen app. But I could not reproduce it.
Flags: needinfo?(khuey)
If you have the latest Gaia master the dividers between icon groups have been replaced with some sort of "tray", and there's an arrow to collapse it at the top left.
Flags: needinfo?(khuey)
Thanks for the info! I confirmed that the problem happens on master flame.
Assignee: nobody → sotaro.ikeda.g
I confirmed that the assertion failure happened when GrallocTextureHostOGL is used from multiple ImageHosts.
How to call GrallocTextureHostOGL::UnbindTextureSource() has a problem. UnbindTextureSource() should be called when all CompositableClients end up to use it. But it is called when one CompositableHost stop to use it. This is a regression of Bug 1077301.
Blocks: 1077301
Keywords: regression
Update nits.
Attachment #8522499 - Attachment is obsolete: true
The problem was fixed. But genlock failure happened on hamachi.
You are right Sotaro, UnbindTextureSource should not be called if the TextureHost is used with another compositable. I think that this patch is correct but I need to test it (so just tagging for feedback until I've confirmed that it works).
Attachment #8522837 - Flags: feedback?(sotaro.ikeda.g)
I just tested on hamachi and I get no genlock failure with this patch
Attachment #8522837 - Flags: feedback?(sotaro.ikeda.g) → review?(sotaro.ikeda.g)
Comment on attachment 8522837 [details] [diff] [review] track the number of compositable references in texture host too Thanks! Much better than mine and confirmed no genlock failure on hamachi.
Attachment #8522837 - Flags: review?(sotaro.ikeda.g) → review+
Attachment #8522545 - Attachment is obsolete: true
nical, I assigned you to this bug, since you created the patch.
Assignee: sotaro.ikeda.g → nical.bugzilla
(In reply to Sotaro Ikeda [:sotaro] from comment #11) > Thanks! Much better than mine and confirmed no genlock failure on hamachi. You did the hard part which was to diagnose the problem. landed: https://hg.mozilla.org/integration/mozilla-inbound/rev/085e5a323eed
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla36
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: