gfx/layers/composite/TextureHost.cpp
@@ -289,6 +289,7 @@ TextureHost::CompositorRecycle()
 TextureHost::TextureHost(TextureFlags aFlags)
     : mActor(nullptr)
     , mFlags(aFlags)
+    , mCompositableCount(0)
 {}
 
 TextureHost::~TextureHost()
